Simplify config file setup by removing symlink dependency
- Rename config_production.properties to config_default.properties in both Java and Python
- Update default config filename in both implementations
- Add command-line argument support in Python for config/profile files
- Update all READMEs to document new simplified configuration approach

New users can now run without creating symlinks - just use config_default.properties
or specify custom config files via command-line arguments.